// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > Link baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-6433c7b8=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-6433c7b8=""
    href="/mobile-vue/overview"
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium t-link--hover"
    data-v-6433c7b8=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
</div>
`;

exports[`Link > Link linkSizeVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-81744b9c=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--small"
    data-v-81744b9c=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       S跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-81744b9c=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-81744b9c=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       M跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-81744b9c=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--large"
    data-v-81744b9c=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       L跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-81744b9c=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
</div>
`;

exports[`Link > Link mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Link 链接
  </h1>
  <p
    class="summary"
  >
    当功能使用图标即可表意清楚时，可使用纯图标悬浮按钮，例如：添加、发布。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-6433c7b8=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-6433c7b8=""
          href="/mobile-vue/overview"
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium t-link--hover"
          data-v-6433c7b8=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        下划线文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-215729b2=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium t-link--underline"
          data-v-215729b2=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium t-link--underline t-link--hover"
          data-v-215729b2=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        前置图标文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-00ec48a6=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium t-link--underline t-link--hover"
          data-v-00ec48a6=""
          target=""
        >
          <span
            class="t-link__prefix-icon"
          >
            
            <svg
              class="t-icon t-icon-link"
              data-v-00ec48a6=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13.2925 3.95949C15.1558 2.09618 18.1768 2.09619 20.0401 3.95949C21.9034 5.8228 21.9034 8.84381 20.0401 10.7071L17.0094 13.7379L15.5952 12.3236L18.6259 9.29291C19.7082 8.21065 19.7082 6.45596 18.6259 5.37371C17.5436 4.29145 15.789 4.29145 14.7067 5.3737L11.676 8.40444L10.2617 6.99023L13.2925 3.95949ZM15.4125 9.99989L9.99826 15.4142L8.58405 14L13.9983 8.58568L15.4125 9.99989ZM8.40395 11.6764L5.37322 14.7072C4.29096 15.7894 4.29096 17.5441 5.37322 18.6264C6.45547 19.7086 8.21016 19.7086 9.29242 18.6264L12.3232 15.5956L13.7374 17.0099L10.7066 20.0406C8.84333 21.9039 5.82231 21.9039 3.959 20.0406C2.0957 18.1773 2.0957 15.1563 3.959 13.293L6.98974 10.2622L8.40395 11.6764Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-00ec48a6=""
          target=""
        >
          <span
            class="t-link__prefix-icon"
          >
            
            <svg
              class="t-icon t-icon-link"
              data-v-00ec48a6=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13.2925 3.95949C15.1558 2.09618 18.1768 2.09619 20.0401 3.95949C21.9034 5.8228 21.9034 8.84381 20.0401 10.7071L17.0094 13.7379L15.5952 12.3236L18.6259 9.29291C19.7082 8.21065 19.7082 6.45596 18.6259 5.37371C17.5436 4.29145 15.789 4.29145 14.7067 5.3737L11.676 8.40444L10.2617 6.99023L13.2925 3.95949ZM15.4125 9.99989L9.99826 15.4142L8.58405 14L13.9983 8.58568L15.4125 9.99989ZM8.40395 11.6764L5.37322 14.7072C4.29096 15.7894 4.29096 17.5441 5.37322 18.6264C6.45547 19.7086 8.21016 19.7086 9.29242 18.6264L12.3232 15.5956L13.7374 17.0099L10.7066 20.0406C8.84333 21.9039 5.82231 21.9039 3.959 20.0406C2.0957 18.1773 2.0957 15.1563 3.959 13.293L6.98974 10.2622L8.40395 11.6764Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        后置图标文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-a3d673c9=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-a3d673c9=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-a3d673c9=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-a3d673c9=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-a3d673c9=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        不同主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-f45dd796=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--danger t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      <div
        class="tdesign-mobile-link-demo"
        data-v-f45dd796=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--success t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--warning t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-ecea4a30=""
      >
        <a
          aria-disabled="true"
          class="t-link t-link--primary t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--default t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--danger t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      <div
        class="tdesign-mobile-link-demo"
        data-v-ecea4a30=""
      >
        <a
          aria-disabled="true"
          class="t-link t-link--success t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--warning t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        链接尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-81744b9c=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--small"
          data-v-81744b9c=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             S跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-81744b9c=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-81744b9c=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             M跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-81744b9c=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--large"
          data-v-81744b9c=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             L跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-81744b9c=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Link > Link prefixVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-00ec48a6=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium t-link--underline t-link--hover"
    data-v-00ec48a6=""
    target=""
  >
    <span
      class="t-link__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-link"
        data-v-00ec48a6=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13.2925 3.95949C15.1558 2.09618 18.1768 2.09619 20.0401 3.95949C21.9034 5.8228 21.9034 8.84381 20.0401 10.7071L17.0094 13.7379L15.5952 12.3236L18.6259 9.29291C19.7082 8.21065 19.7082 6.45596 18.6259 5.37371C17.5436 4.29145 15.789 4.29145 14.7067 5.3737L11.676 8.40444L10.2617 6.99023L13.2925 3.95949ZM15.4125 9.99989L9.99826 15.4142L8.58405 14L13.9983 8.58568L15.4125 9.99989ZM8.40395 11.6764L5.37322 14.7072C4.29096 15.7894 4.29096 17.5441 5.37322 18.6264C6.45547 19.7086 8.21016 19.7086 9.29242 18.6264L12.3232 15.5956L13.7374 17.0099L10.7066 20.0406C8.84333 21.9039 5.82231 21.9039 3.959 20.0406C2.0957 18.1773 2.0957 15.1563 3.959 13.293L6.98974 10.2622L8.40395 11.6764Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium"
    data-v-00ec48a6=""
    target=""
  >
    <span
      class="t-link__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-link"
        data-v-00ec48a6=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13.2925 3.95949C15.1558 2.09618 18.1768 2.09619 20.0401 3.95949C21.9034 5.8228 21.9034 8.84381 20.0401 10.7071L17.0094 13.7379L15.5952 12.3236L18.6259 9.29291C19.7082 8.21065 19.7082 6.45596 18.6259 5.37371C17.5436 4.29145 15.789 4.29145 14.7067 5.3737L11.676 8.40444L10.2617 6.99023L13.2925 3.95949ZM15.4125 9.99989L9.99826 15.4142L8.58405 14L13.9983 8.58568L15.4125 9.99989ZM8.40395 11.6764L5.37322 14.7072C4.29096 15.7894 4.29096 17.5441 5.37322 18.6264C6.45547 19.7086 8.21016 19.7086 9.29242 18.6264L12.3232 15.5956L13.7374 17.0099L10.7066 20.0406C8.84333 21.9039 5.82231 21.9039 3.959 20.0406C2.0957 18.1773 2.0957 15.1563 3.959 13.293L6.98974 10.2622L8.40395 11.6764Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <!---->
  </a>
</div>
`;

exports[`Link > Link statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-link-demo"
    data-v-ecea4a30=""
  >
    <a
      aria-disabled="true"
      class="t-link t-link--primary t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--default t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--danger t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  <div
    class="tdesign-mobile-link-demo"
    data-v-ecea4a30=""
  >
    <a
      aria-disabled="true"
      class="t-link t-link--success t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--warning t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  
</div>
`;

exports[`Link > Link suffixVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-a3d673c9=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-a3d673c9=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-a3d673c9=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium"
    data-v-a3d673c9=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-a3d673c9=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
</div>
`;

exports[`Link > Link themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-link-demo"
    data-v-f45dd796=""
  >
    <a
      aria-disabled="false"
      class="t-link t-link--primary t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--default t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--danger t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  <div
    class="tdesign-mobile-link-demo"
    data-v-f45dd796=""
  >
    <a
      aria-disabled="false"
      class="t-link t-link--success t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--warning t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21L3 3L10.0909 3V5H5L5 19H19V13.9091H21V21H3ZM10.5858 12L17.5858 5L13 5V3L21 3L21 11H19V6.41421L12 13.4142L10.5858 12Z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  
</div>
`;

exports[`Link > Link underlineVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-215729b2=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium t-link--underline"
    data-v-215729b2=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium t-link--underline t-link--hover"
    data-v-215729b2=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
</div>
`;
